# dcm-anon

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  actions.py  anonymize.py  app.py  audit.py  cli.py  conftest.py  manifest.py  phi_table.py  pipeline.py  pyproject.toml  regulatory_mapping.py  requirements-space.txt  requirements.txt  test_anonymize.py  test_manifest.py  uid_mapper.py  verify_output.py
.github/ISSUE_TEMPLATE/: early-access.md
.github/workflows/: test.yml
benchmarks/: throughput.py
dcm_anon/: __init__.py  __main__.py  _version.py  actions.py  audit.py  cli.py  manifest.py  pdf_report.py  phi_table.py  pipeline.py  provenance.py  regulatory_mapping.py  safety.py  sr.py  testkit.py  uid_mapper.py  verify_output.py
docs/: index.html  postmortem-v0.3.5-phi-leak.md
examples/: download_test_dicom.py  run_example.py  verify_golden.py
spaces/: app.py
tests/: conftest.py  test_anonymize.py  test_deny_by_default.py  test_golden_proof.py  test_manifest.py  test_pdf_report.py  test_provenance.py  test_safety_gates.py  test_sr.py  test_sr_pipeline.py  test_uid_hardening.py  test_version_coherence.py
