[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcm-anonymizer"
version = "0.5.0"
description = "DICOM anonymizer (PS3.15 Basic Profile) with regulator-clause-cited compliance manifest and independent output verification"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "César Pereiro García", email = "plusultra.dev@proton.me"},
]
keywords = [
    "dicom", "anonymization", "phi", "de-identification", "medical-imaging",
    "compliance", "eu-ai-act", "hipaa", "gdpr", "pseudonymisation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydicom>=3.0",
]

[project.urls]
Homepage = "https://github.com/Ces107/dcm-anon"
Source = "https://github.com/Ces107/dcm-anon"
Documentation = "https://ces107.github.io/dcm-anon/"
"Bug Tracker" = "https://github.com/Ces107/dcm-anon/issues"
"Hugging Face Demo" = "https://huggingface.co/spaces/cpereiro/dcm-anon"
"Zenodo DOI" = "https://doi.org/10.5281/zenodo.20267651"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pypdf>=4.0",
]
progress = [
    "tqdm>=4.65",
]
ocr = [
    "pytesseract>=0.3",
    "numpy>=1.24",
    "Pillow>=10.0",
]
pdf = [
    "reportlab>=4.0",
]

[project.scripts]
dcm-anon = "dcm_anon.cli:main"

[tool.setuptools.packages.find]
include = ["dcm_anon*"]
exclude = ["tests*", "spaces*", "examples*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B904",   # raise-without-from-inside-except — too strict for this codebase
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["dcm_anon"]
omit = ["tests/*", "examples/*", "spaces/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
